# whisper-writer

./: pyproject.toml
src/: input_simulation.py  key_listener.py  main.py
